Prevent horizontal scroll

--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   background-color: var(--bg-color);
   color: var(--text-color);
-  /* overflow: hidden; */
+  overflow-x: hidden;
 }
 
 #app {
